--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="img-box">
+            <img src="img/transparent.png" width="100%">
+            <div class="img-wrap">
+                <img src="img/original.jpg" width="100%">
+            </div>
+        </div>
+    </div>
 
 
     <script src="script.js"></script>
