--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="img-box">
             <img src="img/transparent.png" width="100%">
             <div class="img-wrap">
-                <img src="img/original.jpg" width="100%">
+                <img src="img/original.jpg" id="originalImg">
             </div>
         </div>
     </div>
