--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <div class="img-wrap">
                 <img src="img/original.jpg" id="originalImg">
             </div>
+            <span id="line">
+                <img src="img/arrow.png" class="arrow">
+            </span>
         </div>
     </div>
 
